# py-xurls

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: publish-docs.yml  push-main.yml  test.yml
0.2.0/: 404.html  index.html
0.2.0/api/xloop/: index.html
0.2.0/api/xsentinels/: sentinel.html  unwrap.html
0.2.0/api/xurls/: index.html
0.2.0/changelog/: index.html
0.2.0/search/: search_index.json
0.2.1/: index.html
0.2.1/api/xurls/: url.html
0.2.1/changelog/: index.html
0.2.1/search/: search_index.json
1.0.0/: 404.html  index.html  sitemap.xml
1.0.0/api/xloop/: index.html
1.0.0/changelog/: index.html
1.0.0/search/: search_index.json
1.1.0/: index.html
1.1.0/api/xurls/: url.html
1.1.0/changelog/: index.html
1.1.0/search/: search_index.json
1.2.0/: 404.html  index.html
1.2.0/changelog/: index.html
1.2.0/search/: search_index.json
1.2.1/: index.html
1.2.1/changelog/: index.html
1.2.1/search/: search_index.json
docs/: index.md
latest/api/xloop/: index.html
latest/api/xurls/: index.html  url.html
tests/: test_url.py
xurls/: __init__.py  frozen_url.py  url.py
