[tool.poetry]
name = "xurls"
version = "0.2.1"
description = "Python URL Library"
authors = ["Josh Orr <josh@orr.blue>"]
packages = [{include = "xurls"}]
readme = "README.md"
repository = "https://github.com/xyngular/py-xurls"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: The Unlicense (Unlicense)"
]

[tool.poetry.dependencies]
python = "^3.8"
xsentinels = "^1.2.1"
xloop = "^1.0.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
autopep8 = "^1.5.7"
pycodestyle = "^2.7.0"
pdoc3 = "^0"
pylint = "^2.9.5"
pytest = "^6.2.4"
pytest-mock = "^3.6.1"
pytest-pycodestyle = "^2.2.0"
black = {version = "*", allow-prereleases = true}
boto3-stubs = { extras = ["essential"], version = "*" }
mkdocstrings = { extras = ["python"], version = "^0" }
mkdocs-autorefs = "^0"
mkdocs-git-revision-date-plugin = "^0"
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.12"
mike = "^1.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.custom.xpublish]
extra-module-docs = ['xsentinels', 'xloop']

[tool.pytest.ini_options]
minversion = "6.0"

# By default, reuse db schema
# (speeds up unit test starts after first unit test run)
# If test-db schmea gets messed up, drop `--reuse-db`
# and it will recreate db next time you run unit tests.
addopts = "--verbose --pycodestyle"

testpaths = ["tests", "xurls"]
python_files = "tests.py test_*.py *_tests.py tests/*"
norecursedirs = "lib/* tests/scripts .serverless .eggs dist/* node_modules"

[tool.black]
line-length = 99
skip-string-normalization = 1
target_version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
